# rpm-policy-checker

./: LICENSE  README.md  pyproject.toml  rpm-policy-checker.desktop
.tx/: config
po/: POTFILES.in  rpm-policy-checker.pot
src/rpm_policy_checker/: __main__.py  main.py
