[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpm-policy-checker"
version = "0.1.0"
description = "GTK4 RPM Policy Checker — validate packages against Fedora packaging guidelines"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
rpm-policy-checker = "rpm_policy_checker.main:main"

[tool.setuptools.packages.find]
where = ["src"]
